feat: update shuttle 0.12

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/meta/manifest.json">
+    <link rel="apple-touch-icon" href="/img/icon.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+    <meta name="theme-color" content="#db4938" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shuttle demo</title>
   </head>
